--- a/tests/test-git.yml
+++ b/tests/test-git.yml
@@ -1,6 +1,7 @@
 ---
 - hosts: localhost
   remote_user: root
-
+  vars:
+    ansible_download_mode: 'git'
   roles:
     - ansible-role-ansible-source
