--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -15,34 +15,28 @@
     group: "root"
     mode: "0644"
 
-- name: 'Clone git repository'
-  register: ansible_repo
-  git:
-    accept_hostkey: "yes"
-    force: "yes"
-    repo: "{{ ansible_repo_url }}"
-    dest: "{{ ansible_install_dir }}"
-    version: "{{ ansible_git_version }}"
-    update: "no"
-
-- name: 'Get version from VERSION file'
-  shell: cat VERSION | cut -f1 -d' '
-  args:
-    chdir: "{{ ansible_install_dir }}"
-  register: ansible_git_version
+- name: 'Get ansible version'
+  shell: ansible --version| cut -d ' ' -f2
+  register: ansible_current_version
   ignore_errors: true
   changed_when: false
+
+- name: 'Include git tasks'
+  include: 'git.yml'
+  when: ansible_download_mode == 'git'
+
+- name: 'Include tar tasks'
+  include: 'tar.yml'
+  when: ansible_download_mode == 'tar'
 
 - name: 'Get ansible version'
   shell: ansible --version| cut -d ' ' -f2
-  register: ansible_shell_version
-  ignore_errors: true
+  register: ansible_current_version
+  #ignore_errors: true
   changed_when: false
+  failed_when: (ansible_install_version.stdout_lines is not defined or
+                ansible_current_version.stdout_lines is not defined or
+                ansible_install_version.stdout_lines != ansible_current_version.stdout_lines)
 
-- name: 'Install ansible'
-  command: make install
-  args:
-    chdir: "{{ ansible_install_dir }}"
-  when: (ansible_git_version.stdout_lines is not defined or
-         ansible_shell_version.stdout_lines is not defined or
-         ansible_git_version.stdout_lines != ansible_shell_version.stdout_lines)
+- debug:
+    msg: "{{ ansible_install_version.stdout_lines }} == {{ ansible_current_version.stdout_lines }}"
