added debug information

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -35,8 +35,17 @@
   ignore_errors: true
   changed_when: false
 
+# Some testing
 - debug:
-    msg: "{{ ansible_install_version.stdout_lines }} == {{ ansible_current_version.stdout_lines }}"
-  failed_when: (ansible_install_version.stdout_lines is not defined or
-                ansible_current_version.stdout_lines is not defined or
-                ansible_install_version.stdout_lines != ansible_current_version.stdout_lines)
+    msg: "Current ansible version {{ ansible_current_version.stdout_lines }}"
+  when: (ansible_current_version.stdout_lines is defined)
+
+- debug:
+    msg: " New ansible version {{ ansible_install_version.stdout_lines }}"
+  when: (ansible_install_version.stdout_lines is defined)
+
+- fail:
+    msg: "Ansilble update failed"
+  when: (ansible_install_version.stdout_lines is not defined or
+        ansible_current_version.stdout_lines is not defined or
+        ansible_install_version.stdout_lines != ansible_current_version.stdout_lines)
