--- a/tasks/git.yml
+++ b/tasks/git.yml
@@ -13,7 +13,7 @@
   shell: cat VERSION | cut -f1 -d' '
   args:
     chdir: "{{ ansible_install_dir }}"
-  register: ansible_install_version
+  register: ansible_expected_version
   #ignore_errors: true
   changed_when: false
 
@@ -21,6 +21,6 @@
   command: make install
   args:
     chdir: "{{ ansible_install_dir }}"
-  when: (ansible_install_version.stdout_lines is not defined or
+  when: (ansible_expected_version.stdout_lines is not defined or
          ansible_current_version.stdout_lines is not defined or
-         ansible_install_version.stdout_lines != ansible_current_version.stdout_lines)
+         ansible_expected_version.stdout_lines != ansible_current_version.stdout_lines)
