--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,5 +1,3 @@
 ---
-# git version
-# This can be the full 40-character SHA-1 hash, the literal string HEAD, a branch name, or a tag name.
-ansible_git_version: "v1.8.4"
-ansible_repo_url: "git://github.com/ansible/ansible.git"
+ansible_source_version: '2.0.0'
+ansible_source_download_url: 'https://github.com/ansible/ansible/archive/v2.0.0-0.9.rc4.zip'
