--- a/tests/test.yml
+++ b/tests/test.yml
@@ -3,7 +3,8 @@
   remote_user: root
 
   vars:
-    ansible_virtualenv: '/home/travis/virtualenv/python2.7.10'
+    ansible_source_version: '2.0.0'
+    ansible_source_download_url: 'https://github.com/ansible/ansible/archive/v2.0.0-0.9.rc4.zip'
 
   roles:
     - ansible-role-ansible-source
